[package]
name = "rine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.*"
pollster = "0.3"
winit = "0.28.*"
wgpu = "0.16.*"
egui = "0.22.*"
egui-wgpu = "0.22.*"
egui-winit = "0.22.*"

[dev-dependencies]
simple_logger = "4.2.0"
